# j3Files

./: README.md
src/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.txt  about.txt  app.manifest  app.rc  build.rs  build_release.py
src/docs/: domain.md  release-notes.md  win32-verification.md
src/src/: lib.rs  main.rs  main_window_commands.rs  main_window_workers.rs  windows_main.rs
src/src/app/: explorer.rs  explorer_ports.rs  mod.rs
src/src/domain/: appearance.rs  bookmark.rs  drop.rs  error.rs  file_item.rs  folder.rs  folder_tree.rs  mod.rs  navigation.rs  search.rs  tab.rs  text.rs
src/src/infra/: file_system.rs  icon.rs  mod.rs  settings.rs  shell.rs  startup.rs
src/src/platform/: clipboard.rs  hdrop.rs  mod.rs  ole_drag_drop.rs  shell_context_menu.rs  shell_execute.rs  shell_icon.rs  shell_operation.rs  win32.rs  win32_ui.rs
src/src/platform/win32_ui/: dpi.rs  handles.rs  menus.rs  messages.rs
src/tests/: windows_file_system_navigation.rs  windows_menu_execution.rs  windows_shell_file_operations.rs
